--- a/index.css
+++ b/index.css
@@ -111,25 +111,25 @@ body {
     align-items: flex-start;
   }
   
-  .skills-card {
+  /* .skills-card {
     text-align: center;
     padding: 20px;
     background-color: #fff;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
     margin: 10px;
     width: 250px;
-  }
+  } */
   
-  .skills-card-img {
+  /* .skills-card-img {
     width: 50px;
     height: 50px;
     margin-bottom: 10px;
-  }
+  } */
   
-  .skills-card-name {
+  /* .skills-card-name {
     font-weight: bold;
     text-align: center;
-  }
+  } */
   
   /* Projects section styles */
   /* Projects section styles */
@@ -280,3 +280,100 @@ body {
     }
   }
   
+
+
+
+
+
+  .box2 {
+    margin-top: 0;
+    padding-bottom: 30px;
+  }
+  
+  .box21 {
+    width: fit-content;
+    margin: auto;
+    text-align: center;
+    padding-top: 20px;
+  }
+  
+  .box21 > h1 {
+    transform: rotate(-3.6deg);
+    border-radius: 12px;
+    padding: 0 10px;
+    color: #001C55;
+    border: 4px solid #001C55;
+  }
+  
+  .box22 {
+    width: 70%;
+    margin: auto;
+    margin-top: 40px;
+    background-color: #001C55;
+    border: 1px solid #989292;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+    border-radius: 12px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    padding: 2rem;
+    backdrop-filter: blur(5px);
+  }
+  
+  .tool {
+    border: none;
+    border-top: 3px solid rgb(126, 133, 126);
+    border-radius: 8px;
+    font-size: 1em;
+    color: #001C55;
+    font-weight: bold;
+    background: white;
+    display: flex;
+
+    flex: 0 1 22%;
+    height: 60px;
+    justify-content: space-evenly;
+    align-items: center;
+    text-align: center;
+    margin: 1%;
+    padding: 5px;
+    transform-origin: 50% 5em;
+  }
+  
+  .box22 > div > div > img {
+    max-width: 40px;
+    margin-right: 5px;
+  }
+  
+  .tool {
+    animation: wiggle 3s linear infinite;
+    animation-delay: calc(0.3s * var(--i));
+  }
+  
+@keyframes wiggle {
+  0%,
+  7% {
+    transform: rotateZ(0);
+  }
+  15% {
+    transform: rotateZ(-10deg);
+  }
+  20% {
+    transform: rotateZ(5deg);
+  }
+  25% {
+    transform: rotateZ(-5deg);
+  }
+  30% {
+    transform: rotateZ(3deg);
+  }
+  35% {
+    transform: rotateZ(-2deg);
+  }
+  40%,
+  100% {
+    transform: rotateZ(0);
+  }
+}
+
+
