--- a/index.css
+++ b/index.css
@@ -320,7 +320,7 @@ body {
     backdrop-filter: blur(5px);
   }
   
-  .tool {
+  .skills-card {
     border: none;
     border-top: 3px solid rgb(126, 133, 126);
     border-radius: 8px;
@@ -345,7 +345,7 @@ body {
     margin-right: 5px;
   }
   
-  .tool {
+  .skills-card {
     animation: wiggle 3s linear infinite;
     animation-delay: calc(0.3s * var(--i));
   }
