--- a/index.css
+++ b/index.css
@@ -122,14 +122,15 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  background-color: white;
-  color: black;
   z-index: 1000;
+  color: black;
+  background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .logo img {
   width: 60px;
-  height: 54px;
+  height: 50px;
   margin-left: 20px;
 }
 
@@ -211,6 +212,7 @@ body {
   white-space: nowrap;
   overflow: hidden;
   border-right: 3px solid #10100f;
+  color: #ff7300;
 }
 
 .typing-animation {
