--- a/index.css
+++ b/index.css
@@ -155,7 +155,7 @@ body {
 }
 
 #nav-menu li a:hover {
-  color:#ff7300;
+  color: #ff7300;
   border-bottom-color: #000;
 
 }
@@ -187,13 +187,12 @@ body {
 }
 
 .home-img {
-  /* background-color: #4a5a79; */
   width: 230px;
   height: 230px;
   border-radius: 50%;
   object-fit: cover;
   margin-bottom: 20px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  filter: drop-shadow(0px 10px 55px rgb(0, 45, 90));
 }
 
 #user-detail-name {
@@ -289,7 +288,7 @@ technical Skills */
   max-width: 960px;
   margin: 0 auto;
   margin-top: 40px;
-  background: linear-gradient(to right, #03173e, #42609c); 
+  background: linear-gradient(to right, #03173e, #42609c);
   border: 1px solid #989292;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
   border-radius: 12px;
@@ -322,8 +321,8 @@ technical Skills */
   animation-delay: calc(.3s * var(--i));
 }
 
-.skills-card:hover{
-  background: linear-gradient(to left, #768eb9, #ffffff); 
+.skills-card:hover {
+  background: linear-gradient(to left, #768eb9, #ffffff);
 }
 
 .box22>div>div>img {
@@ -569,4 +568,3 @@ technical Skills */
   grid-row: 2;
   text-align: center;
 }
-
