--- a/index.css
+++ b/index.css
@@ -123,7 +123,7 @@ body {
   z-index: 1000;
   color: black;
   background-color: white;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  /* box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; */
 }
 
 .logo img {
@@ -192,7 +192,7 @@ body {
   border-radius: 50%;
   object-fit: cover;
   margin-bottom: 20px;
-  filter: drop-shadow(0px 10px 55px rgb(0, 45, 90));
+  /* filter: drop-shadow(0px 10px 55px rgb(0, 45, 90)); */
 }
 
 #user-detail-name {
