--- a/index.css
+++ b/index.css
@@ -430,9 +430,6 @@ technical Skills */
   margin-bottom: 20px;
 }
 
-
-
-
 /* ====hanging animation======= */
 .swing {
   animation: swing ease-in-out 1s infinite alternate;
@@ -440,6 +437,57 @@ technical Skills */
   float: left;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
 }
+
+/* gitHub streak stats  */
+
+.github {
+  width: 58%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: auto auto;
+  margin: auto;
+  text-align: center;
+  gap: 10px;
+  padding-top: 10px;
+}
+
+.github>div:nth-child(3) {
+  grid-column: 1 / 3;
+  grid-row: 2;
+  text-align: center;
+}
+
+/* Contact section styles */
+#contact {
+  text-align: center;
+  padding: 50px 0;
+}
+
+.contact-list {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.contact-list li {
+  margin-right: 20px;
+}
+
+.contact-list li:last-child {
+  margin-right: 0;
+}
+
+.contact-list li a {
+  color: black;
+  text-decoration: none;
+  transition: color 0.3s ease;
+  font-size: 19px;
+}
+
+
+
 
 
 .swing:after {
@@ -476,38 +524,6 @@ technical Skills */
   100% {
     transform: rotate(-3deg);
   }
-}
-
-/* Contact section styles */
-#contact {
-  text-align: center;
-  padding: 50px 0;
-}
-
-.contact-list {
-  list-style: none;
-  padding: 0;
-  display: flex;
-  justify-content: center;
-  margin-bottom: 20px;
-}
-
-.contact-list li {
-  margin-right: 20px;
-}
-
-.contact-list li:last-child {
-  margin-right: 0;
-}
-
-.contact-list li a {
-  color: #333;
-  text-decoration: none;
-  transition: color 0.3s ease;
-}
-
-.contact-list li a:hover {
-  color: #666;
 }
 
 
@@ -550,21 +566,3 @@ technical Skills */
 }
 
 
-/* gitHub streak stats  */
-
-.github {
-  width: 58%;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: auto auto;
-  margin: auto;
-  text-align: center;
-  gap: 10px;
-  padding-top: 10px;
-}
-
-.github>div:nth-child(3) {
-  grid-column: 1 / 3;
-  grid-row: 2;
-  text-align: center;
-}
