--- a/index.css
+++ b/index.css
@@ -144,20 +144,32 @@ body {
 }
 
 #nav-menu li a {
+  text-decoration: none;
+  position: relative;
   margin-right: 20px;
   color: black;
   cursor: pointer;
   text-decoration: none;
   font-size: 20px;
   transition: color 0.3s ease;
-  transition: color 0.3s ease, border-bottom-color 0.3s ease;
-  border-bottom: 2px solid transparent;
 }
 
-#nav-menu li a:hover {
-  color: #ff7300;
-  border-bottom-color: #000;
+#nav-menu li a::after {
+  content: "";
+  display: block;
+  height: 3px;
+  width: 0;
+  bottom: -2px;
+  background-color: #ff7300;
+  position: absolute;
+  left: 50%;
+  transition: width 0.2s ease-out;
+  border-radius: 50px;
+}
 
+#nav-menu li a:hover::after {
+    width: 100%;
+    left: 0;  
 }
 
 /* ----------------Home section styles---------------------- */
@@ -468,6 +480,8 @@ body {
   display: flex;
   justify-content: center;
   margin-bottom: 20px;
+  gap: 10px;
+
 }
 
 .contact-list li {
@@ -482,7 +496,8 @@ body {
   color: black;
   text-decoration: none;
   transition: color 0.3s ease;
-  font-size: 19px;
+  font-size: 17px;
+  gap: 20px;
 }
 
 
