--- a/index.css
+++ b/index.css
@@ -318,8 +318,13 @@ body {
 .about-content .left-div {
   animation: slide-in-left 1s forwards;
 }
+.right-div img{
+  width: 2000px;
+  height: 300px;
+}
 
 .about-content .right-div {
+  
   animation: slide-in-right 1s forwards;
 }
 
@@ -570,20 +575,17 @@ body {
 /* gitHub streak stats  */
 
 .github {
-  width: 58%;
+  width: 50%;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: auto auto;
   margin: auto;
   text-align: center;
   gap: 10px;
   padding-top: 10px;
 }
 
-.github>div:nth-child(3) {
-  grid-column: 1 / 3;
-  grid-row: 2;
-  text-align: center;
+.github div:nth-child(3) {
+  margin-left: 73%;
 }
 
 /* Contact section styles */
@@ -681,5 +683,366 @@ body {
 }
 
 
+/* dark mode slider  */
+input {
+  --s: 25px; /* adjust this to control the size*/
+  
+  height: calc(var(--s) + var(--s)/5);
+  width: auto; /* some browsers need this */
+  aspect-ratio: 2.25;
+  border-radius: var(--s);
+  margin: calc(var(--s)/2);
+  display: grid;
+  cursor: pointer;
+  background-color:#ff7a7a;
+  box-sizing: content-box;
+  overflow: hidden;
+  transition: .3s .1s;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  margin-top: 20px;
+}
+input:before{
+  content: "";
+  padding: calc(var(--s)/10);
+  --_g: radial-gradient(circle closest-side at calc(100% - var(--s)/2) 50%,#000 96%,#0000);
+  background: 
+    var(--_g) 0 /var(--_p,var(--s)) 100% no-repeat content-box,
+    var(--_g) var(--_p,0)/var(--s)  100% no-repeat content-box,
+    #fff;
+  mix-blend-mode: darken;
+  filter: blur(calc(var(--s)/12)) contrast(11);
+  transition: .4s, background-position .4s .1s,
+    padding cubic-bezier(0,calc(var(--_i,-1)*200),1,calc(var(--_i,-1)*200)) .25s .1s;
+}
+input:checked {
+  background-color: #85ff7a;
+}
+input:checked:before {
+  padding: calc(var(--s)/10 + .05px) calc(var(--s)/10);
+  --_p: 100%;
+  --_i: 1;
+}
+
+
+/* Dark mode */
+body.dark-mode {
+  background-color: #17202a; /* Dark blue-gray background color */
+  color: #dcdde1; /* Light gray text color */
+}
+
+.dark-mode #nav-menu {
+  background-color: #1f2c38; /* Dark blue background color */
+  color: #dcdde1; /* Light gray text color */
+}
+
+.dark-mode #nav-menu li a {
+  color: #dcdde1; /* Light gray text color */
+}
+
+.dark-mode #github-home {
+  color: #dcdde1; /* Light gray text color */
+}
+
+.dark-mode .section-title {
+  color: #dcdde1; /* Light gray text color */
+}
+
+.dark-mode #skills {
+  background-color: #17202a; /* Dark blue-gray background color */
+}
+
+.dark-mode .skills-card {
+  background-color: #273c4e; /* Teal-blue background color */
+}
+
+.dark-mode .skills-card:hover {
+  background-color: #4e6d8c; /* Lighter teal-blue background color */
+  color: #17202a; /* Dark blue-gray text color */
+}
+
+.dark-mode #projects {
+  background-color: #17202a; /* Dark blue-gray background color */
+}
+
+.dark-mode .project-card {
+  background-color: #17202a; /* Dark blue-gray background color */
+  box-shadow: 0 2px 5px rgba(220, 221, 225, 0.2);
+}
+
+.dark-mode .project-card:hover {
+  box-shadow: 0 6px 10px #dcdde1; /* Light gray box shadow */
+}
+
+.dark-mode .techs {
+  color: #dcdde1; /* Light gray text color */
+}
+
+.dark-mode .project-description {
+  color: #dcdde1; /* Light gray text color */
+}
+
+.dark-mode #contact {
+  background-color: #17202a; /* Dark blue-gray background color */
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* Responsive styles */
-@media screen and (max-width: 768px) {}
+@media all and (min-width: 768px) and (max-width:1023px) {
+  .logo {
+    width: 30px;
+    height: 50px;
+  }
+
+  .switch {
+    margin-left: 60px;
+    width: 70px;
+    height: 25px;
+  }
+
+  #nav-menu li a {
+    font-size: 22px;
+    margin-right: 5px;
+  }
+
+  #home {
+    margin-left: 20px;
+  }
+
+  #mypic img {
+    width: 250px;
+    height: 250px;
+  }
+
+  #about-title {
+    margin-left: 20px;
+  }
+
+  #about {
+    /* border: 2px solid red; */
+    margin-left: 20px;
+  }
+
+  #Sills-title {
+    width: 100%;
+    margin-left: 20px;
+  }
+
+  #skills {
+    margin-left: 20px;
+  }
+
+  #skills div {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+  .skills-card {
+    width: 150px;
+    height: 55px;
+    margin-top: 10px;
+  }
+
+  #pp {
+    margin-left: 20px;
+  }
+
+  .Project {
+    margin-left: 20px;
+  }
+
+  #project {
+    margin-left: 20px;
+  }
+
+  #git-title {
+    margin-left: 20px;
+  }
+
+  .github {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .github div:nth-child(1) {
+    margin-left: -50px;
+  }
+
+  .github div:nth-child(2) {
+    margin-left: -50px;
+  }
+
+  .github div:nth-child(3) {
+    margin-left: -50px;
+  }
+}
+
+@media all and (min-width: 320px) and (max-width:767px) {
+  .logo {
+    width: 10px;
+    height: 20px;
+    margin-top: -35px;
+    margin-left: -20px;
+  }
+
+  input{
+    width: 60px;
+    height: 30px;
+    margin-left: 20px;
+  }
+
+  .switch {
+    margin-left: 50px;
+    margin-top: -30px;
+    width: 20px;
+    height: 25px;
+  }
+
+  #nav-menu ul:nth-child(2) {
+    margin-top: 20px;
+    margin-left: 60px;
+    margin-right: 30px;
+  }
+
+  #nav-menu li a {
+    font-size: 16px;
+    margin-right: -8px;
+  }
+
+  #home {
+    width: 100%;
+    margin-left: 10px;
+    display: flex;
+  }
+
+  #socials li {
+    font-size: 10px;
+    margin-top: -80px;
+  }
+
+  #user-detail-name {
+    font-size: 30px;
+  }
+
+  #mypic img {
+    width: 150px;
+    height: 150px;
+    margin-left: 50px;
+  }
+
+  #about-title {
+    min-width: 375px;
+    margin-left: 40%;
+  }
+
+  #about {
+    margin-left: 10px;
+    
+  }
+  .about-content{
+    width: 375px;
+    margin-left: 20%;
+    display: flex;
+    flex-direction: column-reverse;
+  }
+  .about-description{
+    min-width: 425px;
+    font-size: 23px;
+    text-align: justify;
+    margin-top: -20px;
+    margin-left: -25px;
+  }
+
+  #Sills-title {
+    min-width: 100%;
+    margin-left: 20px;
+  }
+
+  #skills {
+    min-width: 450px;
+    margin-left: 35px;
+  }
+
+  #skills div {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+  }
+
+  .skills-card {
+    width: 160px;
+    height: 55px;
+    margin-top: 10px;
+  }
+
+  #pp {
+    min-width: 375px;
+    margin-left: 40%;
+  }
+
+  .Project {
+    margin-left: 20px;
+    display: grid;
+    grid-template-columns: repeat(1,1fr);
+  }
+
+  .project-card{
+    min-width: 425px;
+    margin-left: 15px;
+  }
+
+
+  #project {
+    margin-left: 20px;
+  }
+
+  #git-title {
+    margin-left: 20px;
+  }
+
+  .github {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .github div:nth-child(1) {
+    margin-left: -70px;
+  }
+
+  .github div:nth-child(2) {
+    margin-left: -70px;
+  }
+
+  .github div:nth-child(3) {
+    margin-left: -70px;
+  }
+
+  #contact{
+    min-width: 450px;
+    margin-left: 35px;
+  }
+}
+
+
+
