--- a/index.css
+++ b/index.css
@@ -754,7 +754,7 @@ body.dark-mode {
 }
 
 .dark-mode .skills-card {
-  background-color: #273c4e; /* Teal-blue background color */
+  background-color: #dee4ea; /* Teal-blue background color */
 }
 
 .dark-mode .skills-card:hover {
