--- a/index.css
+++ b/index.css
@@ -808,7 +808,7 @@ body.dark-mode {
 
 
 
-/* Responsive styles */
+/* Responsive styles for tablet Screen */
 @media all and (min-width: 768px) and (max-width:1023px) {
   .logo {
     width: 30px;
@@ -901,8 +901,9 @@ body.dark-mode {
 
 
 
+/* Responsive styles for Mobile Screen */
 
-@media all and (min-width: 320px) and (max-width:767px) {
+@media screen and (max-width: 767px) {
   .logo {
     width: 10px;
     height: 20px;
